Fix alignment

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -111,7 +111,7 @@ a[disabled="disabled"] {
 
 .missing-image {
 	background-color: @light-bg;
-	display: table-cell;
+	line-height: 140px;
 	vertical-align: middle;
 	text-align: center;
 	width: 140px;
